Fix the grid layout problem
What I wanted was a --grid-item-max-width variable in order to not let grid items swallow all available width.

--- a/site/css/layout/grid.css
+++ b/site/css/layout/grid.css
@@ -1,6 +1,7 @@
 .grid {
     --grid-gap: var(--s0, 1rem);
     --grid-align-items: stretch;
+    --grid-item-max-width: 1fr;
 
     display: grid;
     align-items: var(--grid-align-items);
@@ -9,7 +10,7 @@
 
 @supports (width: min(30ch, 100%)) {
     .grid {
-        grid-template-columns: repeat(auto-fit, minmax(min(30ch, 100%), 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(min(30ch, 100%), var(--grid-item-max-width)));
     }
 }
 
